--- a/chs_ir/Cargo.toml
+++ b/chs_ir/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "chs_ast"
+name = "chs_ir"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 chs_util = {path = "../chs_util"}
-chs_lexer = {path = "../chs_lexer"}
+chs_ast  = {path = "../chs_ast"}
+chs_lexer  = {path = "../chs_lexer"}
 chs_types = {path = "../chs_types"}
