chs_ir -> chs_codegen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "chs_lexer",
     "chs_ast",
     "chs_types",
-    "chs_util", "chs_ir",
+    "chs_util", "chs_codegen",
 ]
 resolver = "2"
 
