--- a/chs/Cargo.toml
+++ b/chs/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 chs_lexer = { path = "../chs_lexer/" }
 chs_ast = { path = "../chs_ast/" }
 chs_util = { path = "../chs_util/" }
-chs_ir = {path = "../chs_ir"}
+chs_codegen = {path = "../chs_codegen"}
