--- a/chsc/Cargo.toml
+++ b/chsc/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 chs_lexer = { path = "../chs_lexer/" }
 chs_ast = { path = "../chs_ast/" }
 chs_util = { path = "../chs_util/" }
-chs_codegen = {path = "../chs_codegen"}
+chs_codegen = { path = "../chs_codegen" }
+my_cli = "*"
 
 [[bin]]
 name = "chs"
