--- a/chsc/Cargo.toml
+++ b/chsc/Cargo.toml
@@ -8,7 +8,7 @@ chs_lexer = { path = "../chs_lexer/" }
 chs_ast = { path = "../chs_ast/" }
 chs_util = { path = "../chs_util/" }
 chs_codegen = { path = "../chs_codegen" }
-my_cli = "*"
+my_cli = "0.1.4"
 
 [[bin]]
 name = "chs"
