--- a/.github/workflows/maketest.yml
+++ b/.github/workflows/maketest.yml
@@ -12,4 +12,4 @@ jobs:
     - uses: actions/checkout@v4
     - uses: stevenwdv/setup-fasm@v1.4.4
     - name: Run test
-      run: make test
+      run: make test_full
