Restructure the project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [workspace]
 members = [
     "chsc",
-    "chs_lexer",
-    "chs_ast",
-    "chs_types",
-    "chs_util",
-    "chs_codegen", "test_maker",
+    "test_maker",
 ]
 resolver = "2"
 
