--- a/chsc/Cargo.toml
+++ b/chsc/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 qbe = "2.5.0"
-clap = { version = "4", features = ["derive"] }
+clap = { workspace = true }
 which = "4"
 
 [[bin]]
