--- a/chsc/Cargo.toml
+++ b/chsc/Cargo.toml
@@ -3,6 +3,8 @@ name = "chsc"
 version = "0.1.0"
 edition = "2024"
 
+default-run = "chs"
+
 [dependencies]
 qbe = "2.5.0"
 clap = { workspace = true }
