--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,12 @@
 members = [
     "chsc",
     "test_maker",
+    "chslexer",
 ]
 resolver = "2"
 
 package.version = "0.1.0"
 
-[profile.release]
-panic = "abort"
-
-[profile.release-debug]
-inherits = "release"
-debug = true
-
 [workspace.dependencies]
 clap = { version = "4", features = ["derive"] }
+thiserror = "2.0.12"
